added utilites, imports and config

--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
 
         <div class="hero-content">
           <div>
-            <h1>This is a real sassy website...</h1>
+            <h1>This is a real SASSy website...</h1>
             <br/>
             <h1>Get it?</h1>
             <p class="my-1">
-              This is where you would probably say very intelligent things about yourself, or your brand. You'd really just knock their socks off. Bam. Look at you go!
-            </p>
+              This is where you would probably say very intelligent things about yourself, or your brand. You'd really just knock their socks off. </p>
+              <p>Bam. Practice with SASS compiler.
+              </p>
+            </br>
             <a href="#" class="btn-primary">Let me follow you!</a>
             <a href="#" class="btn-secondary">Let me pay you!</a>
           </div>
